# bard

./: .gitignore  .hgignore  CLAUDE.md  LICENSE  LICENSE~  MANIFEST.MF  MRAnything.makefile  MREmergency.makefile  MRRescue.makefile  Mac.makefile  Makefile  Makefile.MRRescue  Makefile.linux  README  README.adoc  README.md  README.org  TODO.txt  bard.asd  bard.c  bard.chproj  bard.el  bard.h  bard.hlvm  bard.lisp  bard.sh  bardvm.asd  build-hello.sh  build.xml  buildvm.sh  cell.c  cell.h  changes.txt  heap.c  heap.h  interactions.lisp  lang.txt  load.scm  loadvm.scm  project.clj  (+6 more)
0.4/jvm/kawa-2.0-bard/: ChangeLog  README-bard.md  build.properties  build.xml  classes-to-skip-for-runtime  configure  configure.ac
0.4/jvm/kawa-2.0-bard/debian/: control
0.4/jvm/kawa-2.0-bard/doc/: ChangeLog  kawa.info  kawa.info-1  kawa.info-3  kawa.man  qexo.man  stamp-vti
0.4/jvm/kawa-2.0-bard/gnu/: Makefile.in
0.4/jvm/kawa-2.0-bard/gnu/brl/: Makefile.am  Makefile.in  random.java
0.4/jvm/kawa-2.0-bard/gnu/bytecode/: AnnotationDefaultAttr.java  AnnotationEntry.java  ArrayType.java  ClassType.java  CodeAttr.java  ConstantValueAttr.java  CpoolEntry.java  CpoolMethodHandle.java  CpoolUtf8.java  ExitableBlock.java  IfState.java  InnerClassesAttr.java  ListCodeSize.java  Method.java  Scope.java  SourceFileAttr.java  SpecialObjectType.java  TypeVariable.java  Variable.java  ZipLoader.java  dump.java  package.html
0.4/jvm/kawa-2.0-bard/gnu/ecmascript/: Lexer.java  Parser.java
0.4/jvm/kawa-2.0-bard/gnu/expr/: AccessExp.java  ApplicationMainSupport.java  ApplyExp.java  BindingInitializer.java  BlockExp.java  CaseExp.java  CheckedTarget.java  ClassExp.java  ConsumerTarget.java  ErrorExp.java  ExpExpVisitor.java  ExpVisitor.java  Expression.java  FindCapturedVars.java  FindTailCalls.java  FluidLetExp.java  IgnoreTarget.java  InlineCalls.java  Inlineable.java  KawaConvert.java  KawaScriptBindings.java  KawaScriptEngine.java  Keyword.java  LangExp.java  Language.java  LetExp.java  ModuleExp.java  ModuleInfo.java  ModuleManager.java  NameLookup.java  ObjectExp.java  PrimProcedure.java  QuoteExp.java  ReferenceExp.java  ResolveNames.java  RunnableModule.java  Special.java  Symbols.java  SynchronizedExp.java  Target.java  (+1 more)
0.4/jvm/kawa-2.0-bard/gnu/lists/: AbstractSequence.java  Array.java  Blob.java  CharSeq.java  ConstVector.java  Consumable.java  ElementPredicate.java  EofClass.java  F32Vector.java  FString.java  FVector.java  ImmutablePair.java  ItemPredicate.java  LList.java  PairWithPosition.java  PositionConsumer.java  PositionManager.java  S16Vector.java  SubSequence.java  TreeList.java  TreePosition.java  U32Vector.java  U64Vector.java  U8Vector.java  XConsumer.java
0.4/jvm/kawa-2.0-bard/gnu/mapping/: DynamicLocation.java  Environment.java  HasNamedParts.java  HasSetter.java  IndirectableLocation.java  Location.java  MethodProc.java  NamedLocation.java  Namespace.java  Procedure.java  Procedure1.java  ProcedureN.java  Promise.java  PropertyKey.java  PropertyLocation.java  PropertySet.java  Setter0.java  SimpleEnvironment.java  SimpleSymbol.java  Symbol.java  Table2D.java  UnboundLocationException.java  ValueStack.java  Values.java  package.html
0.4/jvm/kawa-2.0-bard/gnu/math/: BitOps.java  CQuaternion.java  ChangeLog  Complex.java  DateTime.java  ExponentialFormat.java  FixedRealFormat.java  Makefile.in  Numeric.java  Quaternion.java  RatNum.java  RealNum.java  package.html
0.4/jvm/kawa-2.0-bard/gnu/text/: CaseConvertFormat.java  DelimitSubstitutionFormat.java  EnglishIntegerFormat.java  FlushFormat.java  IntegerFormat.java  Lexer.java  LiteralFormat.java  NamedCharTable.java  Options.java  PadFormat.java  Printable.java  ResourceStreamHandler.java  SourceError.java  SourceMessages.java  StandardNamedChars.java  SyntaxException.java  package.html
0.4/jvm/kawa-2.0-bard/gnu/xml/: TextUtils.java  XMLParser.java
0.4/jvm/kawa-2.0-bard/kawa/: GuiConsole.java  Makefile.am  ReplDocument.java  ReplPaneOutPort.java  SourceMethodType.java  SourceType.java  TelnetOutputStream.java  Version.java  repl.java
0.4/jvm/kawa-2.0-bard/kawa/lang/: AnyPat.java  AutoloadSyntax.java  Eval.java  GenericError.java  Pattern.java  PatternScope.java  Quote.java  RecordConstructor.java  Syntax.java  SyntaxForm.java  SyntaxForms.java  SyntaxTemplate.java  Translator.java  VarListPat.java
0.4/jvm/kawa-2.0-bard/kawa/lib/: DefineRecordType.scm  ExceptionClasses.scm  Makefile.am  arrays.scm  bytevectors.scm  compile_map.scm  exceptions.scm  files.scm  keywords.scm  misc.scm  misc_syntax.scm  numbers.scm  parameterize.scm  parameters.scm  prim_imports.scm  reflection.scm  std_syntax.scm  strings.scm  syntax.scm  trace.scm  vectors.scm
0.4/jvm/kawa-2.0-bard/kawa/standard/: ImportFromLibrary.java  TracedProcedure.java  append.java  call_with_values.java  define.java  define_autoload.java  define_member_alias.java  define_variable.java  load.java  location.java  module_compile_options.java  module_implements.java  module_name.java  module_static.java  object.java  require.java  set_b.java  sleep.java  syntax.java  syntax_error.java  syntax_rules.java  try_catch.java  vector_append.java  with_compile_options.java
0.4/jvm/kawa-2.0-bard/net/bardcode/: Bard.java  bard_syntax.scm  language.scm
0.4/jvm/kawa-2.0-bard/testsuite/: ASupport.scm  HelloCgiK.krl  HelloCgiS.scm  HelloCgiX.xql  MyAnnotType.java  MyDate.java  MyModule.java  SimpleB.java  annotations1-bytecode.expected  annotations1.scm  arr-test.scm  bad-annotations2.expected  bad-keywords1.scm  case-test.scm  command1.scm  command2.scm  command3.scm  convert1.scm  cycle1.scm  cycleb.expected  cycleb1.scm  define1.scm  define3.scm  errors2.scm  errors4.scm  errors5.scm  fannkuch.scm  fannkuchredux.scm  included-1.scm  inlining-test.scm  inlining.expected  inner-1.scm  java-array-test.scm  jaxb-annotations3.scm  jmc.expected  jmc.scm  knucleotide-2.scm  knucleotide.scm  lambda-in-class-1.scm  lazy-test.scm  (+57 more)
attic/0.4/jvm/kawa-2.0-bard/: AUTHORS  INSTALL  Make-rules  Makefile.am  Makefile.in  NEWS  README  TODO  jar-manifest  patch-source-list
(+2855 files in other folders)
